--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php" : ">=5.4",
-        "pimple/pimple" : "v3.0.0",
+        "speedwork/container" : "dev-master",
         "speedwork/util" : "dev-master"
     },
     "autoload" : {
