--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
         "speedwork/container" : "dev-master",
         "speedwork/util" : "dev-master"
     },
+    "require-dev" : {
+        "phpunit/phpunit": "~3.7",
+        "satooshi/php-coveralls": "dev-master"
+    },
     "autoload" : {
         "files": [
             "src/functions.php"
