--- a/composer.json
+++ b/composer.json
@@ -3,26 +3,29 @@
     "type": "library",
     "description": "Speedwork Core Modules",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "sankar",
-            "email": "sankar.suda@gmail.com"
-        }
-    ],
+    "authors": [{
+        "name": "sankar",
+        "email": "sankar.suda@gmail.com"
+    }],
     "require": {
-        "php" : ">=5.4",
-        "speedwork/container" : "dev-master",
-        "speedwork/util" : "dev-master"
+        "php": ">=5.6",
+        "speedwork/container": "~1.0",
+        "speedwork/util": "~1.0"
     },
-    "require-dev" : {
-        "phpunit/phpunit": "~3.7",
-        "satooshi/php-coveralls": "dev-master"
+    "require-dev": {
+        "phpunit/phpunit": "~5.5",
+        "satooshi/php-coveralls": "2.*"
     },
-    "autoload" : {
-        "files": [
-            "src/functions.php"
-        ],
-        "psr-4": { "Speedwork\\Core\\": "src" }
+    "autoload": {
+        "files": ["src/functions.php"],
+        "psr-4": {
+            "Speedwork\\Core\\": "src"
+        }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    }
 }
