--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
         "email": "sankar.suda@gmail.com"
     }],
     "require": {
-        "php": ">=5.5",
-        "speedwork/container": "~1.0",
-        "speedwork/util": "~1.0"
+        "php": ">=5.6",
+        "speedwork/container": "^1.0",
+        "speedwork/util": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.5",
